fix(responsive): fix collab badge on mobile

--- a/src/containers/Generative/Display/GenerativeDisplay.module.scss
+++ b/src/containers/Generative/Display/GenerativeDisplay.module.scss
@@ -153,7 +153,7 @@
     width: 100%;
     align-items: flex-start;
     flex-direction: column;
-    text-align: center;
+    text-align: left;
   }
   .presentation {
     flex-direction: column-reverse;
